update net strategies